# observer

./: CMakeLists.txt
include/: BackendService.h  IStatusObserver.h  StatusMonitor.h
src/: BackendService.cpp  StatusMonitor.cpp  main.cpp
